@@ -1,3 +1,7 @@
+2012-08-13  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
+
+	* Added timeline listing.
+
 2012-08-09  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
 
 	* Started adding more code documentation to summary.py.
